# GZAI-llamacpp-desktop

./: .gitignore  LICENSE  README.md  image-viewer.html  index.html  package-lock.json  package.json  tailwind.config.js  terminal-popout.html  terminal.html  vite.config.ts
src/: App.tsx  image-viewer-main.tsx  index.css  popout-main.tsx  terminal-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: computer_use.rs  deepseek.rs  diagnostics.rs  llama_cpp.rs  main.rs  proxy.rs  terminal.rs
src/api/: apiProxy.ts  chat.ts  deepseek.ts  diagnostics.ts  modelManager.ts  terminal.ts
src/components/: ChatWindow.tsx  Experts.tsx  FileExplorer.tsx  GZAIStudio.tsx  LocalModelSettings.tsx  SessionList.tsx  Settings.tsx  Sidebar.tsx  TerminalStandalone.tsx  Tools.tsx
src/contexts/: ChatContext.tsx  ThemeContext.tsx
src/core/: CanAICostModule.tsx
src/utils/: selectFolder.ts
