[package]
name = "canmodel"
version = "1.0.5-13"
description = "CanAI Desktop Application"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"

[dependencies]
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "5.0"
tokio = { version = "1", features = ["time"] }
rand = "0.8"
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
